fix:post componenet text alignement fixed

--- a/src/components/home/style.module.css
+++ b/src/components/home/style.module.css
@@ -10,6 +10,7 @@
     border: 2px solid black;
     margin: 2px;
     padding: 10px;
+    text-align: center;
 }
 
 span {
